changed the links for the new pages

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
               </li><li><a href="works/Williams2.html"><img src="images/gallery/crops/Williams2.jpg" alt=""></a>
               </li><li><a href="works/harris4.html"><img src="images/gallery/crops/harris4.jpg" alt=""></a>
               </li><li><a href="works/Lu1.html"><img src="images/gallery/crops/Lu1.jpg" alt=""></a></li>
-              </li><li><a href="works/works.html"><img src="images/gallery/crops/printdummymartin.jpg" alt=""></a>
-              </li><li><a href="works/works.html"><img src="images/gallery/crops/rakowski.jpg" alt=""></a>
-              </li><li><a href="works/works.html"><img src="images/gallery/crops/Schultz62.jpg" alt=""></a>
-              </li><li><a href="works/works.html"><img src="images/gallery/crops/tapelifting3.jpg" alt=""></a>
+              </li><li><a href="works/printdummymartin.html"><img src="images/gallery/crops/printdummymartin.jpg" alt=""></a>
+              </li><li><a href="works/rakowski.html"><img src="images/gallery/crops/rakowski.jpg" alt=""></a>
+              </li><li><a href="works/Schultz62.html"><img src="images/gallery/crops/Schultz62.jpg" alt=""></a>
+              </li><li><a href="works/tapelifting3.html"><img src="images/gallery/crops/tapelifting3.jpg" alt=""></a>
               </li>
             </ul>
           </div>
