--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,6 @@
 
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/vendor/html5-main.css">
-  <link rel="stylesheet" href="js/vendor/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -28,15 +27,19 @@
       </h1>
 
       <div class="gallery">
+        <div class="grid">
+          <div class="grid-sizer"></div>
 
-        <a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg"></a>
-        <a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg"></a>
-        <a href="works/works.html"><img src="images/gallery/crops/harris4.jpg"></a>
-        <a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg"></a>
-        <a href="works/works.html"><img src="images/gallery/crops/printdummymartin.jpg"></a>
-        <a href="works/works.html"><img src="images/gallery/crops/rakowski.jpg"></a>
-        <a href="works/works.html"><img src="images/gallery/crops/Schultz62.jpg"></a>
-        <a href="works/works.html"><img src="images/gallery/crops/tapelifting3.jpg"></a>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg"></a></div>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg"></a></div>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/harris4.jpg"></a></div>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg"></a></div>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/printdummymartin.jpg"></a></div>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/rakowski.jpg"></a></div>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Schultz62.jpg"></a></div>
+          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/tapelifting3.jpg"></a></div>
+
+        </div>
 
       </div>
 
@@ -66,10 +69,12 @@
     </div><!-- End #global-footer -->
 
   </div><!-- End .page-container -->
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script><!--Zac, you need this line (and file) for your portfolio page -->
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script><!--Zac, you need this line (and file) for your portfolio page -->
+  <script src="js/vendor/isotope.pkgd.min.js"></script><!--Zac, you need this line (and file) for your portfolio page -->
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/gallery.js"></script><!--Zac, you need this line (and file) for your portfolio page -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <!-- <script>
