--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       <a id="mission"></a>
       <div class="center">
 
-        Mission / about section
+        <h1>Mission</h1>
+
 
       </div>
     </div><!-- End #mission-section -->
