Created navigation.js and linked it in Bio.html, Gallery.html and index.html

--- a/gallery.html
+++ b/gallery.html
@@ -74,6 +74,7 @@
   <script src="js/vendor/isotope.pkgd.min.js"></script><!--Zac, you need this line (and file) for your portfolio page -->
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/navigation.js"></script>
   <script src="js/gallery.js"></script><!--Zac, you need this line (and file) for your portfolio page -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
