Added code to index.html give navigation a personality

--- a/index.html
+++ b/index.html
@@ -25,13 +25,28 @@
       <div class="center">
 
         <img src="images/Header & Footer/cargologo.png" href="index.html"/>
+              <div class="navigation">
+                <ul>
+                  <li class="active"><a href="#mission"> Mission</a></li>
+                  <li><a href="bios.html"> Who We Are </a></li>
+                  <li><a href="gallery.html"> Gallery </a></li>
+                  <li><a href="#contact-section"> Work With Us </a></li>
+                </ul>
+              </div>
 
-          <ul>
-            <li> <a class="button" href="#mission"> Mission </a> </li>
-            <li> <a class="button" href="bios.html"> Who We Are </a> </li>
-            <li> <a class="button" href="gallery.html"> Gallery </a> </li>
-            <li> <a class="button" href="#contact-section"> Work With Us </a> </li>
-          </ul>
+             <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+                
+                <a href="index.html"> Home </a>
+                <a href="#mission"> Mission</a>
+                <a href="bios.html"> Who We Are </a>
+                <a href="gallery.html"> Gallery</a>
+                <a href="#contact-section"> Work With Us</a>
+              </div>
+
+              <div id="main">
+                <span style="font-size:30px;cursor:pointer" onclick="openNav()">☰</span>
+              </div>
 
       </div>
     </div><!-- End #global-navigation -->
