fixed active selection on navigation on index page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="images/Header & Footer/cargologo.png" href="index.html"/>
               <div class="navigation">
                 <ul>
-                  <li class="active"><a href="#mission"> Mission</a></li>
+                  <li><a href="#mission"> Mission</a></li>
                   <li><a href="bios.html"> Who We Are </a></li>
                   <li><a href="gallery.html"> Gallery </a></li>
                   <li><a href="#contact-section"> Work With Us </a></li>
