Added navigation to bios.html and gallery.html

--- a/bios.html
+++ b/bios.html
@@ -21,6 +21,34 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="site-container">
+          <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
+            <div class="center">
+
+              <img src="images/Header & Footer/cargologo.png" href="index.html"/>
+                    <div class="navigation">
+                      <ul>
+                        <li><a href="index.html#mission"> Mission</a></li>
+                        <li class="active"><a href="bios.html"> Who We Are </a></li>
+                        <li><a href="gallery.html"> Gallery </a></li>
+                        <li><a href="index.html#contact-section"> Work With Us </a></li>
+                      </ul>
+                    </div>
+
+                   <div id="mySidenav" class="sidenav">
+                      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+
+                      <a href="index.html"> Home </a>
+                      <a href="#mission"> Mission</a>
+                      <a href="bios.html"> Who We Are </a>
+                      <a href="gallery.html"> Gallery</a>
+                      <a href="#contact-section"> Work With Us</a>
+                    </div>
+
+                    <div id="main">
+                      <span style="font-size:30px;cursor:pointer" onclick="openNav()"> ☰ </span>
+                    </div>
+            </div>
+          </div><!-- End #global-navigation -->
 
           <h1>Who We Are</h1>
 
