--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
     <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
       <div class="center">
 
-        <img src="images/Header & Footer/cargologo.png" href="index.html"/>
+        <a href="index.html"> <img src="images/Header & Footer/cargologo.png"/> </a>
               <div class="navigation">
                 <ul>
                   <li><a href="index.html#mission"> Mission</a></li>
