--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <p>  VPAA Art + Design Program </p>
       <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
 
-      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
     </div>
   </div><!-- End #global-footer -->
