Added footer to bios.html and gallery.html

--- a/bios.html
+++ b/bios.html
@@ -94,6 +94,20 @@
 
           </div>
 
+          <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
+            <div class="center">
+
+              <p> designalliance.hcc@gmail.com </p>
+
+              <p>  Harford Community College c/o Design Alliance </p>
+              <p>  VPAA Art + Design Program </p>
+              <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
+
+              <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+
+            </div>
+          </div><!-- End #global-footer -->
+
         </div><!-- End .site-container -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
