--- a/gallery.html
+++ b/gallery.html
@@ -81,19 +81,16 @@
 
 
 
-    <div id="global-footer"><!-- Katie Zawadowicz -->
+    <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
       <div class="center">
 
         <p> designalliance.hcc@gmail.com </p>
 
-        <p> Harford Community College </p>
-        <p>  c/o Design Alliance </p>
-        <p>  Visual, Preforming & Applied Arts </p>
-        <p>  Art + Design Program </p>
-        <p>  401 Thomas Run Road </p>
-        <p>  Bel Air, MD 21015 </p>
+        <p>  Harford Community College c/o Design Alliance </p>
+        <p>  VPAA Art + Design Program </p>
+        <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
 
-        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
       </div>
     </div><!-- End #global-footer -->
