anthony help. response

--- a/bios.html
+++ b/bios.html
@@ -56,36 +56,36 @@
           </div>
 
           <div class="content">
-
-            <div class="alison">
-              <a target="_blank" href="bios/alison-hazle.html">
+<style>.content {padding-bottom: 100px; } .bios { display: inline-block; margin: 20px 50px; } .bios img { display: block; } .bios h4 { display: inline; }</style>
+            <div class="bios">
+              <a href="bios/alison-hazle.html">
                 <img src="images/bios/alison.png" alt="alison.png" width="80" />
               </a>
               <h4>Alison</h4>
             </div>
 
-            <div class="courtney">
-              <a target="_blank" href="bios/courtney-schultz.html">
+            <div class="bios">
+              <a href="bios/courtney-schultz.html">
                 <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
               </a>
               <h4>Courtney</h4>
             </div>
 
-            <div class="deanna">
+            <div class="bios">
               <a target="_blank" href="bios/deanna-marino.html">
                 <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
               </a>
               <h4>Deanna</h4>
             </div>
 
-            <div class="nikki">
+            <div class="bios">
               <a target="_blank" href="bios/nikki-ishak.html">
                 <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
               </a>
               <h4>Nikki</h4>
             </div>
 
-            <div class="phoebe">
+            <div class="bios">
               <a target="_blank" href="bios/phoebe-monroe.html">
                 <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
               </a>
