--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
         <p>Design Alliance is a group of artists -- currently nine students -- developing in the Art + Design Program at Harford Community College in Bel Air, Maryland.</p>
 
         <h2>WHAT IS OUR MISSION?</h2>
-        <p>Our goal is to develop a Print Exchange Program with other colleges around the country. This exchange would involve sending exhibitions of artwork from our program to other colleges and, in turn, hosting similar exhibitions on our campus here in Maryland. We believe this exchange of art will help everyone involved grow in terms of developing our creativity and talents as young artists.</p>
+        <p>Our goal is to develop a Print Exchange Program with other colleges around the country. This exchange would involve sending exhibitions of artwork from our program to other colleges and, in turn, hosting similar exhibitions on our campus here in Maryland. We believe this exchange of art will help all participating students grow in terms of developing our creativity and talent as young artists.</p>
 
         <h2>HOW DOES THIS EXCHANGE WORK?</h2>
-        <p>Our launch project is called “Tapelifting: Print Xchange.” In Fall 2015, a group of HCC students participated in a “Tapelifting” digital art project. As part of a Winter Session independent study course, we organized and curated an exhibition of this work that we are hoping will travel to a partner school. In exchange, that school will send a print project to be exhibited at the Chesapeake Gallery on campus at Harford Community College.</p>
+        <p>Our launch project is called “Tapelifting: Print Xchange.” In Fall 2015, a group of HCC students participated in a “Tapelifting” digital art project. As part of a Winter Session independent study course, we organized and curated an exhibition of this work that we are hoping will travel to a partner school. In exchange, that school would send a print project to be exhibited at the Chesapeake Gallery on campus at Harford Community College.</p>
 
         <h2>WHAT ARE THE BENEFITS OF PARTICIPATING?</h2>
-        <p>Participating students will gain experience in curating, marketing, preparing and installing an exhibition with the possibility of designing a catalog to accompany the exhibition. Our ultimate goal is for each school to bring actual printed works to show, as well as a slide show on laptop that shares our process of creativity.
+        <p>Participating students will gain experience in curating, marketing, preparing and installing an exhibition with the possibility of designing a catalog to accompany the exhibition. We are hoping each school could bring actual printed works to show, as well as a slide show on laptop that shares our process of creativity.
 
       </div>
 
       <div class="mission-artwork">
-        <img src="images/mission-art1.jpg" />
-        <img src="images/mission-art2.jpg" />
-        <img src="images/mission-art3.jpg" />
-        <img src="images/mission-art4.jpg" />
+        <img class="mission-art1" src=images/mission-art1.jpg" />
+        <img class="mission-art2" src=images/mission-art2.jpg" />
+        <img class="mission-art3" src=images/mission-art3.jpg" />
+        <img class="mission-art4" src=images/mission-art4.jpg" />
       </div>
 
     </div><!-- End #mission-section -->
