More copy tweaks.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h2>HOW DOES THIS EXCHANGE WORK?</h2>
         <p>Our launch project is called “Tapelifting: Print Xchange.” In Fall 2015, a group of HCC students participated in a “Tapelifting” digital art project. As part of a Winter Session independent study course, we organized and curated an exhibition of this work that we are hoping will travel to a partner school. In exchange, that school would send a print project to be exhibited at the Chesapeake Gallery on campus at Harford Community College.</p>
 
-        <h2>WHAT ARE THE BENEFITS OF PARTICIPATING?</h2>
+        <h2>WHAT ARE THE BENEFITS OF PARTICIPATION?</h2>
         <p>Participating students will gain experience in curating, marketing, preparing and installing an exhibition with the possibility of designing a catalog to accompany the exhibition. We are hoping each school could bring actual printed works to show, as well as a slide show on laptop that shares our process of creativity.
 
       </div>
