--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>Design Alliance is a group of artists -- currently nine students -- developing in the Art + Design Program at Harford Community College in Bel Air, Maryland.</p>
 
         <h2>WHAT IS OUR MISSION?</h2>
-        <p>Our goal is to develop a Print Exchange Program with other colleges around the country. This exchange would involve sending exhibitions of artwork from our program to other colleges and, in turn, hosting similar exhibitions on our campus here in Maryland. We believe this exchange of art will help all participating students grow in terms of developing our creativity and talent as young artists.</p>
+        <p>Our goal is to develop a Print Exchange Program with other colleges around the country. This exchange would involve sending exhibitions of artwork from our program to other colleges and, in turn, hosting similar exhibitions on our campus here in Maryland. We believe this exchange of art and ideas will help all participating students grow in terms of developing our creativity and talent as young artists.</p>
 
         <h2>HOW DOES THIS EXCHANGE WORK?</h2>
         <p>Our launch project is called “Tapelifting: Print Xchange.” In Fall 2015, a group of HCC students participated in a “Tapelifting” digital art project. As part of a Winter Session independent study course, we organized and curated an exhibition of this work that we are hoping will travel to a partner school. In exchange, that school would send a print project to be exhibited at the Chesapeake Gallery on campus at Harford Community College.</p>
