linked individual works from gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -60,14 +60,14 @@
         <div class="grid">
           <div class="grid-sizer"></div>
 
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg"></a></div>
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg"></a></div>
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/harris4.jpg"></a></div>
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg"></a></div>
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/printdummymartin.jpg"></a></div>
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/rakowski.jpg"></a></div>
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/Schultz62.jpg"></a></div>
-          <div class="grid-item"><a href="works/works.html"><img src="images/gallery/crops/tapelifting3.jpg"></a></div>
+          <div class="grid-item"><a href="works/Williams1.html"><img src="images/gallery/crops/Williams1.jpg"></a></div>
+          <div class="grid-item"><a href="works/Williams2.html"><img src="images/gallery/crops/Williams2.jpg"></a></div>
+          <div class="grid-item"><a href="works/harris4.html"><img src="images/gallery/crops/harris4.jpg"></a></div>
+          <div class="grid-item"><a href="works/Lu1.html"><img src="images/gallery/crops/Lu1.jpg"></a></div>
+          <div class="grid-item"><a href="works/printdummymartin.html"><img src="images/gallery/crops/printdummymartin.jpg"></a></div>
+          <div class="grid-item"><a href="works/rakowski.html"><img src="images/gallery/crops/rakowski.jpg"></a></div>
+          <div class="grid-item"><a href="works/Schultz62.html"><img src="images/gallery/crops/Schultz62.jpg"></a></div>
+          <div class="grid-item"><a href="works/tapelifting3.html"><img src="images/gallery/crops/tapelifting3.jpg"></a></div>
 
         </div>
 
