moving style to less page- bio page

--- a/bios.html
+++ b/bios.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>PUT A TITLE HERE</title>
-        <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
+        <meta name="bio" content="bio page of members">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -56,7 +56,7 @@
           </div>
 
           <div class="content">
-<style>.content {padding-bottom: 100px; } .bios { display: inline-block; margin: 20px 50px; } .bios img { display: block; } .bios h4 { display: inline; }</style>
+
             <div class="bios">
               <a href="bios/alison-hazle.html">
                 <img src="images/bios/alison.png" alt="alison.png" width="80" />
