--- a/bios/deanna-marino.html
+++ b/bios/deanna-marino.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>PUT A TITLE HERE</title>
-  <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
+  <title>Deanna Marino</title>
+  <meta name="ddeanna marino" content="deanna marino bio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="apple-touch-icon" href="../apple-touch-icon.png">
