Added updated navigation and footer html code to individual works pages. Also, the order on each html was Navigation -> Footer -> image. I fixed it by putting the footer code on the bottom.

--- a/works/printdummymartin.html
+++ b/works/printdummymartin.html
@@ -24,49 +24,60 @@
       <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
         <div class="center">
 
-          <img src="../images/Header & Footer/cargologo.png" href="individual-works.html"/>
+          <a href="index.html"> <img src="../images/Header & Footer/cargologo.png"/> </a>
+                <div class="navigation">
+                  <ul>
+                    <li><a href="#mission"> Mission</a></li>
+                    <li><a href="bios.html"> Who We Are </a></li>
+                    <li><a href="gallery.html"> Gallery </a></li>
+                    <li><a href="#contact-section"> Work With Us </a></li>
+                  </ul>
+                </div>
 
-            <ul>
-              <li> <a class="button" href="#mission"> Mission </a> </li>
-              <li> <a class="button" href="bios.html"> Who We Are </a> </li>
-              <li> <a class="button" href="gallery.html"> Gallery </a> </li>
-              <li> <a class="button" href="#contact-section"> Work With Us </a> </li>
-            </ul>
+               <div id="mySidenav" class="sidenav">
+                  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+
+                  <a href="index.html"> Home </a>
+                  <a href="#mission"> Mission</a>
+                  <a href="bios.html"> Who We Are </a>
+                  <a href="gallery.html"> Gallery</a>
+                  <a href="#contact-section"> Work With Us</a>
+                </div>
+
+                <div id="main">
+                  <span style="font-size:30px;cursor:pointer" onclick="openNav()"> ☰ </span>
+                </div>
 
         </div>
       </div><!-- End #global-navigation -->
 
 
 
-
-
-
-
-
-
-
-
-
-    <div id="global-footer"><!-- Katie Zawadowicz -->
-      <div class="center">
-
-        <p> designalliance.hcc@gmail.com </p>
-
-        <p> Harford Community College </p>
-        <p>  c/o Design Alliance </p>
-        <p>  Visual, Preforming & Applied Arts </p>
-        <p>  Art + Design Program </p>
-        <p>  401 Thomas Run Road </p>
-        <p>  Bel Air, MD 21015 </p>
-
-        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="../images/Header & Footer/FB-f-Logo__blue_29.png"/></a>
-
+      <div id="image">
+        <img id="test" src="../images/gallery/crops/printdummymartin.jpg" alt="">
       </div>
-    </div><!-- End #global-footer -->
 
-    <div id="image">
-      <img id="test" src="../images/gallery/crops/printdummymartin.jpg" alt="">
-    </div>
+
+
+
+      <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
+        <div class="center">
+            <div id="address">
+                  <p>  Harford Community College c/o Design Alliance </p>
+                  <p>  VPAA Art + Design Program </p>
+                  <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
+            </div>
+        <img src="../images/Header & Footer/cargologo.png" class="footer_logo"/>
+        <div id="footer_info">
+              <p> designalliance.hcc@gmail.com </p>
+              <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="../images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+        </div>
+
+
+        </div>
+      </div><!-- End #global-footer -->
+
+
 
   </div><!-- End .page-container -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
