--- a/bios/deanna-marino.html
+++ b/bios/deanna-marino.html
@@ -20,6 +20,38 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="page-container">
+
+    <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
+      <div class="center">
+
+        <a href="index.html"> <img src="../images/Header & Footer/cargologo.png"/> </a>
+              <div class="navigation">
+                <ul>
+                  <li><a href="#mission"> Mission</a></li>
+                  <li><a href="bios.html"> Who We Are </a></li>
+                  <li><a href="gallery.html"> Gallery </a></li>
+                  <li><a href="#contact-section"> Work With Us </a></li>
+                </ul>
+              </div>
+
+             <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+
+                <a href="index.html"> Home </a>
+                <a href="#mission"> Mission</a>
+                <a href="bios.html"> Who We Are </a>
+                <a href="gallery.html"> Gallery</a>
+                <a href="#contact-section"> Work With Us</a>
+              </div>
+
+              <div id="main">
+                <span style="font-size:30px;cursor:pointer" onclick="openNav()"> ☰ </span>
+              </div>
+
+      </div>
+    </div><!-- End #global-navigation -->
+
+    
     <div class="center">
 
       <h1>Deanna Marino</h1>
@@ -56,22 +88,22 @@
 
 
 
-    <div id="global-footer"><!-- Katie Zawadowicz -->
-      <div class="center">
+  <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
+    <div class="center">
+        <div id="address">
+              <p>  Harford Community College c/o Design Alliance </p>
+              <p>  VPAA Art + Design Program </p>
+              <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
+        </div>
+    <img src="../images/Header & Footer/cargologo.png" class="footer_logo"/>
+    <div id="footer_info">
+          <p> designalliance.hcc@gmail.com </p>
+          <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="../images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+    </div>
 
-        <p> designalliance.hcc@gmail.com </p>
 
-        <p> Harford Community College </p>
-        <p>  c/o Design Alliance </p>
-        <p>  Visual, Preforming & Applied Arts </p>
-        <p>  Art + Design Program </p>
-        <p>  401 Thomas Run Road </p>
-        <p>  Bel Air, MD 21015 </p>
-
-        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
-
-      </div>
-    </div><!-- End #global-footer -->
+    </div>
+  </div><!-- End #global-footer -->
 
   </div><!-- End .page-container -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
