Basic Animation - works

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/vendor/html5-main.css">
+  <link rel="stylesheet" href="css/vendor/animate.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -42,19 +43,10 @@
 
     <div id="intro-section" class="section row"><!-- Jacob Bendan -->
 
-      <script>
-        function hookgo(x){
-          var elem = document.getElementById(x);
-          elem.style.transition = "margin-left "
-        }
-      </script>
-
-      <document onloadstart="hookgo(intro1);">
-
-        <div id="intro1">Creativity</div>
-        <div id="intro2">Unleashed</div>
-        <div id="intro3">Design</div>
-        <div id="intro4">Alliance</div>
+        <h1 id="design" class="animated bounceOutRight">Design</h1>
+        <h2 id="alliance" class="animated bounceOutLeft">Alliance</h2>
+        <h1 id="creativity" class="animated bounceInLeft">Creativity</h1>
+        <h2 id="unleashed" class="animated bounceInRight">Unleashed</h2>
 
 
 
