Added in basic breakpoints
breakpoints in but not yet coded.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 
     <div id="intro-section" class="section row"><!-- Jacob Bendan -->
 
+        <div id="positioncontrol">
         <h1 id="design" class="animated bounceOutRight">Design</h1>
         <h2 id="alliance" class="animated bounceOutLeft">Alliance</h2>
         <h1 id="creativity" class="animated bounceInLeft">Creativity</h1>
         <h2 id="unleashed" class="animated bounceInRight">Unleashed</h2>
-
+      </div>
 
 
     </div><!-- End #intro-section -->
