--- a/bios/phoebe-monroe.html
+++ b/bios/phoebe-monroe.html
@@ -23,24 +23,24 @@
     <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
       <div class="center">
 
-        <a href="index.html"> <img src="../images/Header & Footer/cargologo.png"/> </a>
+        <a href="../index.html"> <img src="../images/Header & Footer/cargologo.png"/> </a>
               <div class="navigation">
                 <ul>
-                  <li><a href="#mission"> Mission</a></li>
-                  <li><a href="bios.html"> Who We Are </a></li>
-                  <li><a href="gallery.html"> Gallery </a></li>
-                  <li><a href="#contact-section"> Work With Us </a></li>
+                  <li><a href="../index.html#mission"> Mission</a></li>
+                  <li><a href="../bios.html"> Who We Are </a></li>
+                  <li><a href="../gallery.html"> Gallery </a></li>
+                  <li><a href="../index.html#contact-section"> Work With Us </a></li>
                 </ul>
               </div>
 
              <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 
-                <a href="index.html"> Home </a>
-                <a href="#mission"> Mission</a>
-                <a href="bios.html"> Who We Are </a>
-                <a href="gallery.html"> Gallery</a>
-                <a href="#contact-section"> Work With Us</a>
+                <a href="../index.html"> Home </a>
+                <a href="../index.html#mission"> Mission</a>
+                <a href="../bios.html"> Who We Are </a>
+                <a href="../gallery.html"> Gallery</a>
+                <a href="../index.html#contact-section"> Work With Us</a>
               </div>
 
               <div id="main">
