--- a/bios.html
+++ b/bios.html
@@ -38,10 +38,10 @@
                       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 
                       <a href="index.html"> Home </a>
-                      <a href="#mission"> Mission</a>
+                      <a href="index.html#mission"> Mission</a>
                       <a href="bios.html"> Who We Are </a>
                       <a href="gallery.html"> Gallery</a>
-                      <a href="#contact-section"> Work With Us</a>
+                      <a href="index.html#contact-section"> Work With Us</a>
                     </div>
 
                     <div id="main">
