--- a/works/Williams1.html
+++ b/works/Williams1.html
@@ -67,7 +67,7 @@
                   <p>  VPAA Art + Design Program </p>
                   <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
             </div>
-        <img src="../images/Header & Footer/cargologo.png" class="footer_logo"/>
+        <a href="index.html"><img src="../images/Header & Footer/cargologo.png" class="footer_logo"/></a>
         <div id="footer_info">
               <p> designalliance.hcc@gmail.com </p>
               <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="../images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
