fixed issue with overflow - sort of

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
 
 
-        <h1 id="design" class="animated bounceOutRight">Design</h1>
-        <h2 id="alliance" class="animated bounceOutLeft">Alliance</h2>
+        <h1 id="design" class="animated bounceOutLeft">Design</h1>
+        <h2 id="alliance" class="animated bounceOutRight">Alliance</h2>
         <h1 id="creativity" class="animated bounceInLeft">Creativity</h1>
         <h2 id="unleashed" class="animated bounceInRight">Unleashed</h2>
-      
+
 
     </div><!-- End #intro-section -->
 
