--- a/works/rakowski.html
+++ b/works/rakowski.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Creativity Unleashed</title>
+  <title>Individual Works</title>
   <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
