Deleted tiny spaces between images.

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
       </div>
 
       <div class="mission-artwork">
-        <img class="mission-art1" src="images/mission/mission-art1.jpg" />
-        <img class="mission-art2" src="images/mission/mission-art2.jpg" />
-        <img class="mission-art3" src="images/mission/mission-art3.jpg" />
-        <img class="mission-art4" src="images/mission/mission-art4.jpg" />
+        <img class="mission-art1" src="images/mission/mission-art1.jpg"
+        /><img class="mission-art2" src="images/mission/mission-art2.jpg"
+        /><img class="mission-art3" src="images/mission/mission-art3.jpg"
+        /><img class="mission-art4" src="images/mission/mission-art4.jpg" />
       </div>
 
     </div><!-- End #mission-section -->
