Applied the background image to content container.

--- a/bios.html
+++ b/bios.html
@@ -50,60 +50,64 @@
             </div>
           </div><!-- End #global-navigation -->
 
-          <h1>Who We Are</h1>
-
-          <div class="background">
-          </div>
-
           <div class="content">
 
-            <div class="bios">
-              <a href="bios/alison-hazle.html">
-                <img src="images/bios/alison.png" alt="alison.png" width="80" />
-              </a>
-              <h4>Alison</h4>
-            </div>
+            <div class="center">
 
-            <div class="bios">
-              <a href="bios/courtney-schultz.html">
-                <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
-              </a>
-              <h4>Courtney</h4>
-            </div>
+              <h1>Who We Are</h1>
 
-            <div class="bios">
-              <a target="_blank" href="bios/deanna-marino.html">
-                <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
-              </a>
-              <h4>Deanna</h4>
-            </div>
+              <div class="bios">
+                <a href="bios/alison-hazle.html">
+                  <img src="images/bios/alison.png" alt="alison.png" width="80" />
+                </a>
+                <h4>Alison</h4>
+              </div>
 
-            <div class="bios">
-              <a target="_blank" href="bios/nikki-ishak.html">
-                <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
-              </a>
-              <h4>Nikki</h4>
-            </div>
+              <div class="bios">
+                <a href="bios/courtney-schultz.html">
+                  <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
+                </a>
+                <h4>Courtney</h4>
+              </div>
 
-            <div class="bios">
-              <a target="_blank" href="bios/phoebe-monroe.html">
-                <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
-              </a>
-              <h4>Phoebe</h4>
-            </div>
+              <div class="bios">
+                <a target="_blank" href="bios/deanna-marino.html">
+                  <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
+                </a>
+                <h4>Deanna</h4>
+              </div>
 
+              <div class="bios">
+                <a target="_blank" href="bios/nikki-ishak.html">
+                  <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
+                </a>
+                <h4>Nikki</h4>
+              </div>
+
+              <div class="bios">
+                <a target="_blank" href="bios/phoebe-monroe.html">
+                  <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
+                </a>
+                <h4>Phoebe</h4>
+              </div>
+
+            </div>
+            
           </div>
 
           <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
             <div class="center">
+                <div id="address">
+                      <p>  Harford Community College c/o Design Alliance </p>
+                      <p>  VPAA Art + Design Program </p>
+                      <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
+                </div>
+            <a href="index.html"><img src="images/Header & Footer/cargologo.png" class="footer_logo"/></a>
+            <div id="footer_info">
+                  <p> designalliance.hcc@gmail.com </p>
+                  <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+            </div>
 
-              <p> designalliance.hcc@gmail.com </p>
-
-              <p>  Harford Community College c/o Design Alliance </p>
-              <p>  VPAA Art + Design Program </p>
-              <p>  401 Thomas Run Road, Bel Air, MD 21015 </p>
-
-              <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/Header & Footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
             </div>
           </div><!-- End #global-footer -->
