changed the background color of the individual works pages

--- a/works/Williams2.html
+++ b/works/Williams2.html
@@ -52,11 +52,11 @@
       </div><!-- End #global-navigation -->
 
 
-
-      <div id="image">
-        <img id="test" src="../images/gallery/crops/Williams2.jpg" alt="">
+      <div class="content">
+        <div id="image">
+          <img id="test" src="../images/gallery/crops/Williams2.jpg" alt="">
+        </div>
       </div>
-
 
 
 
