--- a/works/Lu1.html
+++ b/works/Lu1.html
@@ -52,9 +52,10 @@
       </div><!-- End #global-navigation -->
 
 
-
-      <div id="image">
-        <img id="test" src="../images/gallery/crops/Lu1.jpg" alt="">
+      <div class="content">
+        <div id="image">
+          <img id="test" src="../images/gallery/crops/Lu1.jpg" alt="">
+        </div>
       </div>
 
 
