--- a/works/Williams1.html
+++ b/works/Williams1.html
@@ -19,45 +19,45 @@
     <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
     <div class="page-container">
 
       <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
-        <div class="center">
+          <div class="center">
 
-          <a href="../index.html"> <img src="../images/Header & Footer/cargologo.png"/> </a>
-                <div class="navigation">
-                  <ul>
-                    <li><a href="../index.html#mission"> Mission</a></li>
-                    <li><a href="../bios.html"> Who We Are </a></li>
-                    <li><a href="../gallery.html"> Gallery </a></li>
-                    <li><a href="../index.html#contact-section"> Work With Us </a></li>
-                  </ul>
-                </div>
+            <a href="../index.html"> <img src="../images/Header & Footer/cargologo.png"/> </a>
+                  <div class="navigation">
+                    <ul>
+                      <li><a href="../index.html#mission"> Mission</a></li>
+                      <li><a href="../bios.html"> Who We Are </a></li>
+                      <li><a href="../gallery.html"> Gallery </a></li>
+                      <li><a href="../index.html#contact-section"> Work With Us </a></li>
+                    </ul>
+                  </div>
 
-               <div id="mySidenav" class="sidenav">
-                  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+                 <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 
-                  <a href="../index.html"> Home </a>
-                  <a href="../index.html#mission"> Mission</a>
-                  <a href="../bios.html"> Who We Are </a>
-                  <a href="../gallery.html"> Gallery</a>
-                  <a href="../index.html#contact-section"> Work With Us</a>
-                </div>
+                    <a href="../index.html"> Home </a>
+                    <a href="../index.html#mission"> Mission</a>
+                    <a href="../bios.html"> Who We Are </a>
+                    <a href="../gallery.html"> Gallery</a>
+                    <a href="../index.html#contact-section"> Work With Us</a>
+                  </div>
 
-                <div id="main">
-                  <span style="font-size:30px;cursor:pointer" onclick="openNav()"> ☰ </span>
-                </div>
+                  <div id="main">
+                    <span style="font-size:30px;cursor:pointer" onclick="openNav()"> ☰ </span>
+                  </div>
 
-        </div>
+          </div>
       </div><!-- End #global-navigation -->
 
 
-
-      <div id="image">
-        <img id="test" src="../images/gallery/crops/Williams1.jpg" alt="">
+      <div class="content">
+        <div id="image">
+          <img id="test" src="../images/gallery/crops/Williams1.jpg" alt="">
+        </div>
       </div>
-
-
 
 
       <div id="global-footer" class="section row"><!-- Katie Zawadowicz -->
