--- a/works/harris4.html
+++ b/works/harris4.html
@@ -55,9 +55,10 @@
 
 
 
-
-      <div id="image">
-        <img id="test" src="../images/gallery/crops/harris4.jpg">
+      <div class="content">
+        <div id="image">
+          <img id="test" src="../images/gallery/crops/harris4.jpg">
+        </div>
       </div>
 
 
